Updates all files

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
     <!-- Content Section -->
     <div >
-       <img style="width:100%" src="./Assest/1.jpeg" alt="">
+       <img style="width:100%;" src="./new5.jpeg" alt="">
     </div>
 
       <!--Slider-->
