--- a/index.html
+++ b/index.html
@@ -662,6 +662,7 @@
       opacity: 0;
       animation: slideUp 0.8s ease forwards;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.486); 
+   top: 50%;
     }
 
     .card:hover {
@@ -766,6 +767,170 @@
       }
     }
     /*Cards end*/
+    /*Tagline start*/
+    
+    .landing-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            flex-direction: column;
+            position: relative;
+            padding: 20px;
+        }
+
+        .model-gallery {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
+
+        .model-img {
+            position: absolute;
+            border-radius: 15px;
+            object-fit: cover;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .model-img:hover {
+            transform: scale(1.03);
+            z-index: 2;
+        }
+
+        .model-1 {
+            top: 10%;
+            left: 10%;
+            height: 50%;
+            width: 20%;
+            max-width: 300px;
+        }
+
+        .model-2 {
+            top: 20%;
+            right: 10%;
+            height: 60%;
+            width: 25%;
+            max-width: 350px;
+        }
+
+        .model-3 {
+            left: 20%;
+            height: 45%;
+            width: 24%;
+            margin-top: 35%;
+            max-width: 320px;
+        }
+
+        .content-wrapper {
+            position: relative;
+            z-index: 2;
+            text-align: center;
+            max-width: 600px;
+            background-color: rgba(246, 246, 242, 0.85);
+            padding: 30px;
+            border-radius: 15px;
+            backdrop-filter: blur(5px);
+        }
+
+        .tagline {
+            font-size: 1.2rem;
+            color: #666666;
+            margin-bottom: 0.5rem;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .main-heading {
+            font-size: 2rem;
+            margin-bottom: 1.5rem;
+            font-weight: bold;
+            line-height: 1.2;
+        }
+
+        @media (min-width: 768px) {
+            .main-heading {
+                font-size: 2.5rem;
+            }
+        }
+
+        .cta-button {
+            display: inline-block;
+            background-color: #000000;
+            color: #ffffff;
+            padding: 12px 30px;
+            text-decoration: none;
+            border-radius: 15px;
+            margin-top: 1.5rem;
+            font-weight: bold;
+            transition: all 0.3s ease;
+            border: 2px solid transparent;
+        }
+
+        .cta-button:hover {
+            background-color: transparent;
+            color: #000000;
+            border-color: #000000;
+            transform: translateY(-3px);
+        }
+
+        @media (max-width: 768px) {
+            .model-gallery {
+                display: flex;
+                flex-direction: column;
+                position: relative;
+                height: auto;
+                gap: 20px;
+                margin-bottom: 30px;
+            }
+
+            .model-img {
+                position: relative;
+                width: 80%;
+                height: auto;
+                max-height: 300px;
+                top: auto;
+                left: auto;
+                right: auto;
+                margin: 0 auto;
+            }
+
+            .model-1, .model-2, .model-3 {
+                position: relative;
+                top: auto;
+                left: auto;
+                right: auto;
+                margin: 0 auto 20px;
+                width: 80%;
+                height: auto;
+            }
+
+            .content-wrapper {
+                padding: 20px;
+                margin-top: 20px;
+            }
+
+            .main-heading {
+                font-size: 1.8rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .model-1, .model-2, .model-3 {
+                width: 95%;
+            }
+
+            .tagline {
+                font-size: 1rem;
+            }
+
+            .cta-button {
+                padding: 10px 25px;
+                font-size: 0.9rem;
+            }
+        }
+        /*Tagline end*/
    /*Carsoule start*/
    :root{
             --slide-padding: 10px 30px;
@@ -777,7 +942,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 50vh;
+            min-height: 120vh;
         }
 
         .carousel-container {
@@ -1013,7 +1178,19 @@
     </section>
     <!--shop end-->
     <img src="./Glowing Skin (2).png" alt="" style="width: 100%;height: 500px; margin: 8rem 0;">
-
+    <div class="landing-container">
+        <div class="model-gallery">
+            <img class="model-img model-1" src="./assets/model-1.jpg" alt="Natural makeup look" loading="lazy">
+            <img class="model-img model-2" src="./assets/model-2.jpg" alt="Everyday beauty look" loading="lazy">
+            <img class="model-img model-3" src="./assets/model-3.jpg" alt="Minimal makeup style" loading="lazy">
+        </div>
+        
+        <div class="content-wrapper">
+            <p class="tagline">All you need is less.</p>
+            <h1 class="main-heading">Makeup for Real People</h1>
+            <a href="#shop" class="cta-button">SHOP NOW</a>
+        </div>
+    </div>
     <!--Cards start-->
     <div class="card-container">
         <div class="card">
